--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="https://unpkg.com/realm-web@1.0.0-rc.2/dist/bundle.iife.js"></script>
+    <script src="https://unpkg.com/realm-web@1.0.0/dist/bundle.iife.js"></script>
     <script>
       const appId = "video-kvyxb"; // Set Realm app ID here.
       const appConfig = {
